Fix the alignment of the content

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ img {
 .banner {
   position: relative;
   max-height: 500px;
+  overflow: hidden;
 }
 
 .img-flex {
@@ -28,10 +29,12 @@ img {
 
 .content {
   position: absolute;
-  left: 50px;
-  right: 50px;
+  left: 50%;
+  transform: translate(-50%);
+
   bottom: 5px;
-  max-width: 500px;
+  width:100%;
+  max-width: 50em;
   overflow: hidden;
 }
 
@@ -46,5 +49,4 @@ h2 {
 p {
   font-size: 2rem;
   font-style: italic;
-
 }
